tests/type_errors/while.pylambda
input x;
while x {
    x = x - 1;
}
print x;